--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt": "^1.3.0",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-less": "^3.0.0",
+    "grunt-eslint": "^23.0.0",
     "grunt-htmlhint": "^0.9.13"
   }
 }
