--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/jianghaoki/grunt-demo#readme",
   "devDependencies": {
+    "chai": "^4.3.4",
     "grunt": "^1.3.0",
     "grunt-contrib-csslint": "^2.0.0",
     "grunt-contrib-less": "^3.0.0",
     "grunt-eslint": "^23.0.0",
-    "grunt-htmlhint": "^0.9.13"
+    "grunt-htmlhint": "^0.9.13",
+    "istanbul": "^0.4.5",
+    "mocha": "^8.3.2"
   }
 }
