--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "grunt-eslint": "^23.0.0",
     "grunt-htmlhint": "^0.9.13",
     "istanbul": "^0.4.5",
-    "mocha": "^8.3.2"
+    "mocha": "^8.3.2",
+    "mochawesome": "^6.2.2",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0"
   }
 }
